--- a/application.yaml
+++ b/application.yaml
@@ -16,14 +16,19 @@ spring:
   liquibase:
     change-log: classpath:liquibase.xml
 
+http:
+  user-agent: Mozilla/5.0 (Windows; U; WindowsNT 5.1; en-US; rv1.8.1.6) HeliontSearchBot/20070725 Firefox/2.0.0.6
+  referrer: http://www.google.com
+  timeout: 1000 #//1 секунда
+
 indexing-settings:
   sites:
     - url: https://sendel.ru/
       name: sendel
-      #- url: https://www.playback.ru/
-      #name: playback
-      #- url: https://www.lenta.ru
-      #name: Лента.ру
+    - url: https://nikoartgallery.com/
+      name: nikoartgallery
+    - url: https://www.lenta.ru
+      name: Лента.ру
       #- url: https://www.skillbox.ru
       #name: Skillbox
       #- url: https://www.playback.ru
