--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -31,8 +31,8 @@ indexing-settings:
       name: sendel
     - url: https://nikoartgallery.com/
       name: nikoartgallery
-    - url: https://www.lenta.ru
-      name: Лента.ру
+      #- url: https://www.lenta.ru
+      #name: Лента.ру
       #- url: https://www.skillbox.ru
       #name: Skillbox
       #- url: https://www.playback.ru
