Этап 2. Индексация сайта и страниц сайта

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,10 +20,10 @@ spring:
     level:
       liquibase: DEBUG
 
-http:
+connection-settings:
   user-agent: Mozilla/5.0 (Windows; U; WindowsNT 5.1; en-US; rv1.8.1.6) HeliontSearchBot/20070725 Firefox/2.0.0.6
   referrer: http://www.google.com
-  timeout: 1000 #//1 секунда
+  timeout: 3000 #//3 секунды
 
 indexing-settings:
   sites:
