--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,12 +23,12 @@ spring:
 connection-settings:
   user-agent: Mozilla/5.0 (Windows; U; WindowsNT 5.1; en-US; rv1.8.1.6) HeliontSearchBot/20070725 Firefox/2.0.0.6
   referrer: http://www.google.com
-  timeout: 3000 #//3 секунды
+  timeout: 5000 #//3 секунды
 
 indexing-settings:
   sites:
-    - url: https://sendel.ru/
-      name: sendel
+    #    - url: https://sendel.ru/
+    #      name: sendel
     - url: https://nikoartgallery.com/
       name: nikoartgallery
       #- url: https://www.lenta.ru
