--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.cosium.spring.data</groupId>
+            <artifactId>spring-data-jpa-entity-graph-parent</artifactId>
+            <version>3.2.2</version>
+        </dependency>
         <!--Лемматизатор } -->
 
     </dependencies>
