--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,10 +27,10 @@ connection-settings:
 
 indexing-settings:
   sites:
-    - url: https://sendel.ru/
-      name: sendel
-    - url: https://nikoartgallery.com/
-      name: nikoartgallery
+      - url: https://sendel.ru/
+        name: sendel
+      #- url: https://nikoartgallery.com/
+      #name: nikoartgallery
       #- url: https://www.lenta.ru
       #name: Лента.ру
       #- url: https://www.skillbox.ru
