--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,8 +29,8 @@ indexing-settings:
   sites:
       - url: https://sendel.ru/
         name: sendel
-      #- url: https://nikoartgallery.com/
-      #name: nikoartgallery
+      - url: https://nikoartgallery.com/
+        name: nikoartgallery
       #- url: https://www.lenta.ru
       #name: Лента.ру
       #- url: https://www.skillbox.ru
